<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="insert_goal_hint_title">Título</string>
    <string name="insert_goal_title_title">Título</string>

    <string name="insert_goal_hint_description">Descrição</string>
    <string name="insert_goal_title_description">Descrição</string>

    <string name="insert_goal_title_status">Selecione um status</string>

    <string name="insert_goal_hint_finish_date">Selecione o termino da meta</string>

    <string name="insert_goal_save_title">Salvar</string>
    <string name="insert_goal_delete_title">Remover</string>


    <string name="insert_goal_dialog_confirmation_message">Deseja remover essa meta permanentemente ?</string>
    <string name="insert_goal_dialog_confirmation_button">Remover</string>
    <string name="insert_goal_dialog_cancel_button">Cancelar</string>
</resources>
