<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insert_goal_title_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/insert_goal_hint_title"
        android:layout_marginStart="@dimen/insert_goal_fields_min_margin"
        android:layout_marginTop="@dimen/insert_goal_fields_min_margin"
        android:layout_marginEnd="@dimen/insert_goal_fields_min_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_goal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance"
            android:inputType="textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insert_goal_description_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/insert_goal_hint_description"
        android:layout_marginStart="@dimen/insert_goal_fields_min_margin"
        android:layout_marginTop="@dimen/insert_goal_fields_min_margin"
        android:layout_marginEnd="@dimen/insert_goal_fields_min_margin"
        app:layout_constraintTop_toBottomOf="@+id/insert_goal_title_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_goal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance"
            android:inputType="textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insert_spinner_status_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:hint="@string/insert_goal_title_status"
        app:hintTextAppearance="@string/insert_goal_title_status"
        android:layout_marginTop="@dimen/insert_goal_fields_min_margin"
        android:layout_marginStart="@dimen/insert_goal_fields_min_margin"
        android:layout_marginEnd="@dimen/insert_goal_fields_min_margin"
        app:layout_constraintTop_toBottomOf="@+id/insert_goal_description_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/insert_spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insert_goal_finish_date_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_goal_hint_finish_date"
        android:layout_marginStart="@dimen/insert_goal_fields_min_margin"
        android:layout_marginTop="@dimen/insert_goal_fields_min_margin"
        android:layout_marginEnd="@dimen/insert_goal_fields_min_margin"
        app:layout_constraintTop_toBottomOf="@+id/insert_spinner_status_content"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_goal_finish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            style="@style/TextAppearance"
            android:drawableEnd="@drawable/ic_calendar_24"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/insert_goals_save_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/insert_goal_width_save_button"
        android:text="@string/insert_goal_save_title"
        android:layout_margin="@dimen/insert_goal_fields_min_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>